# actions_test

./: CHANGELOG.md  LICENSE  README.md  cookiecutter.json  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-app.yml  semantic-release.yml
hooks/: pre_gen_project.py
src/actions_test/: basic_function.py
src/lib_template/: basic_function.py
tests/unit/: test_basic_function.py
{{cookiecutter.project_name}}/: LICENSE  README.md  pyproject.toml  setup.cfg
{{cookiecutter.project_name}}/.github/workflows/: python-app.yml  semantic-release.yml
{{cookiecutter.project_name}}/tests/unit/: test_basic_function.py
