
[metadata]
name = actions_test
author = Jonathan van Leeuwen
version = "0.2.0"
long_description = file: README.md
url=https://github.com/jonathanvanleeuwen/actions_test
project_urls=
        Bug Tracker = https://github.com/jonathanvanleeuwen/actions_test/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
requires_python = >=3.8
include_package_data = True
zip_safe = False
package_dir=
    =src
packages = find:
install_requires =
    numpy >=1.23.5

[semantic_release]
version_variable = setup.cfg:version
branch = main
upload_to_repository=false