
[metadata]
name = lib_template
author = Jonathan van Leeuwen
version = "1.0.2"
long_description = file: README.md, LICENSE
long_description_content_type= text/markdown
license= "MIT License"
url=https://github.com/jonathanvanleeuwen/actions_test
project_urls=
        Bug Tracker = https://github.com/jonathanvanleeuwen/actions_test/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
requires_python = >=3.8
include_package_data = True
zip_safe = False
package_dir=
    =src
packages = find:
install_requires =
    numpy >=1.23.5
    pytest>=7.1.2
    pytest-xdist>=2.5.0
    pytest-sugar>=0.9.5
    pytest-cov>=3.0.0

[tool:pytest]
testpaths =
    tests
addopts =
    --cov src
    --cov-report html:reports/htmlcov


[semantic_release]
version_variable = setup.cfg:version
branch = main
upload_to_repository=false