[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.project_name}}"
license = { text = '"MIT License"' }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["readme", "version"]
dependencies = [
    "pytest>=7.1.2",
    "pytest-xdist>=2.5.0",
    "pytest-sugar>=0.9.5",
    "pytest-cov>=3.0.0",
]

[[project.authors]]
name = "{{cookiecutter.my_name}}"

[project.urls]
Homepage = "https://github.com/{{cookiecutter.github_name}}/{{cookiecutter.project_name}}"
"Bug Tracker" = "https://github.com/{{cookiecutter.github_name}}/{{cookiecutter.project_name}}/issues"

[tool.setuptools]
requires-python = ">=3.8"
include-package-data = true
zip-safe = false
package-dir = { "" = "src" }

[tool.setuptools.packages]
find = { namespaces = false }

[tool.setuptools.dynamic]
readme = { file = ["README.md", "LICENSE"], content-type = "text/markdown" }
version = { attr = "{{cookiecutter.project_name}}.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = """
--cov src
--cov-report html:reports/htmlcov"""

[tool.semantic_release]
version_variables = [
    'src/{{cookiecutter.project_name}}/__init__.py:__version__',
]
branch = "main"
upload_to_repository = false
